--- a/registration-service/pom.xml
+++ b/registration-service/pom.xml
@@ -5,11 +5,11 @@
 
 	<groupId>com.tips</groupId>
 	<artifactId>registration-service</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>jar</packaging>
 
 	<name>registration-service</name>
-	<description>Demo project for Spring Boot</description>
+	<description>registration-service</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
