--- a/registration-service/src/main/resources/bootstrap.properties
+++ b/registration-service/src/main/resources/bootstrap.properties
@@ -3,7 +3,7 @@ spring.application.name=registration-service
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=herasimau.leanid@gmail.com
-spring.mail.password=lftadgavetdxiuic
+spring.mail.password=****
 spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable = true
