--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,10 @@
         <module>auth-service</module>
         <module>config-service</module>
         <module>eureka-service</module>
+        <module>hystrix-dashboard</module>
         <module>registration-service</module>
+        <module>zipkin-service</module>
+
     </modules>
 
 </project>
