--- a/hystrix-dashboard/pom.xml
+++ b/hystrix-dashboard/pom.xml
@@ -9,7 +9,7 @@
 	<packaging>jar</packaging>
 
 	<name>hystrix-dashboard</name>
-	<description>Demo project for Spring Boot</description>
+	<description>hystrix-dashboard</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
