--- a/api-service/src/main/resources/bootstrap.properties
+++ b/api-service/src/main/resources/bootstrap.properties
@@ -1,2 +1,6 @@
 spring.cloud.config.uri=http://localhost:8888
 spring.application.name=api-service
+spring.datasource.url=jdbc:mysql://localhost/accounts
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
