--- a/auth-service/src/main/resources/bootstrap.yml
+++ b/auth-service/src/main/resources/bootstrap.yml
@@ -1,4 +1,9 @@
 spring:
+  datasource:
+    url: jdbc:mysql://localhost/accounts
+    username: root
+    password: root
+    driver-class-name: com.mysql.jdbc.Driver
   jpa:
     hibernate:
       ddl-auto: update
