--- a/registration-service/src/main/resources/bootstrap.properties
+++ b/registration-service/src/main/resources/bootstrap.properties
@@ -9,3 +9,8 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable = true
 spring.mail.properties.mail.from.email=herasimau.leanid@gmail.com
 spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.url=jdbc:mysql://localhost/accounts
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
