--- a/hystrix-dashboard/pom.xml
+++ b/hystrix-dashboard/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.tips</groupId>
 	<artifactId>hystrix-dashboard</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>jar</packaging>
 
 	<name>hystrix-dashboard</name>
