--- a/zipkin-service/src/main/resources/bootstrap.yml
+++ b/zipkin-service/src/main/resources/bootstrap.yml
@@ -4,4 +4,4 @@ spring:
       uri: http://localhost:8888
       fail-fast: true
   application:
-    name: zipkin-service
+    name: zipkin-service #service name
