--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ language: java
 jdk: oraclejdk8
 
 before_script:
-  - mysql -e 'create database accounts;
+  - mysql -u root -e 'create database accounts;'
 
 after_success:
   - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
