--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ language: java
 jdk: oraclejdk8
 
 before_script:
+  - bash .travis.install-mysql-5.7.sh
   - mysql -u root -e 'create database accounts;'
 
 after_success:
