--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,14 @@ services:
 
 language: java
 jdk: oraclejdk8
-
+dist: trusty
+addons:
+  apt:
+    packages:
+    - mysql-server-5.6
+    - mysql-client-core-5.6
+    - mysql-client-5.6
 before_script:
-  - bash .travis.install-mysql-5.7.sh
   - mysql -u root -e 'create database accounts;'
 
 after_success:
