--- a/registration-service/src/test/resources/application.yml
+++ b/registration-service/src/test/resources/application.yml
@@ -2,5 +2,5 @@ spring:
   datasource:
     url: jdbc:mysql://localhost/accounts
     username: root
-    password: root
+    password:
     driver-class-name: com.mysql.jdbc.Driver
