--- a/api-client/pom.xml
+++ b/api-client/pom.xml
@@ -102,6 +102,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<finalName>api-client</finalName>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
