--- a/config-service/pom.xml
+++ b/config-service/pom.xml
@@ -54,6 +54,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<finalName>config-service</finalName>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
