--- a/registration-service/pom.xml
+++ b/registration-service/pom.xml
@@ -104,6 +104,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<finalName>registration-service</finalName>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
