--- a/zipkin-service/pom.xml
+++ b/zipkin-service/pom.xml
@@ -67,6 +67,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<finalName>zipkin-service</finalName>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
