--- a/auth-service/src/main/resources/bootstrap.yml
+++ b/auth-service/src/main/resources/bootstrap.yml
@@ -1,7 +1,7 @@
 spring:
   cloud:
     config:
-      uri: http://localhost:8888
+      uri: hhttp:///config-service:8888
       fail-fast: true
   application:
     name: auth-service
