--- a/registration-service/src/main/resources/bootstrap.yml
+++ b/registration-service/src/main/resources/bootstrap.yml
@@ -1,7 +1,7 @@
 spring:
   cloud:
     config:
-      uri: http://localhost:8888
+      uri: http:///config-service:8888
       fail-fast: true
   application:
     name: registration-service
