--- a/eureka-service/src/main/resources/bootstrap.yml
+++ b/eureka-service/src/main/resources/bootstrap.yml
@@ -1,7 +1,6 @@
 spring:
-  cloud:
-    config:
-      uri: http://localhost:8888
-      fail-fast: true
-  application:
-    name: eureka-service
+    application.name: eureka-service
+    cloud:
+        config:
+          uri: http://config-service:8888
+          failFast: true
