--- a/hystrix-dashboard/src/main/resources/bootstrap.yml
+++ b/hystrix-dashboard/src/main/resources/bootstrap.yml
@@ -1,7 +1,6 @@
 spring:
-  cloud:
-    config:
-      uri: http://localhost:8888
-      fail-fast: true
-  application:
-    name: hystrix-dashboard
+    application.name: hystrix-dashboard
+    cloud:
+        config:
+          uri: http://config-service:8888
+          failFast: true
