--- a/auth-service/src/main/resources/bootstrap.yml
+++ b/auth-service/src/main/resources/bootstrap.yml
@@ -1,7 +1,7 @@
 spring:
-  cloud:
-    config:
-      uri: hhttp:///config-service:8888
-      fail-fast: true
   application:
     name: auth-service
+  cloud:
+    config:
+      uri: http://config-service:8888
+      fail-fast: true
