--- a/config-service/src/main/resources/bootstrap.yml
+++ b/config-service/src/main/resources/bootstrap.yml
@@ -8,4 +8,4 @@ spring:
             server:
                 git:
                     uri: https://github.com/herasimau/tips-config.git
-        fail-fast: true
+        failFast: true
